# Shaar

./: .gitattributes  .gitignore  README.md  decrypt.sh
src/: CMakeLists.txt  buildinfo.h  itkIntegralImageFilter.h  itkIntegralImageFilter.hxx  shaar-main.cxx
src/tclap/: Arg.h  ArgException.h  ArgTraits.h  CmdLine.h  CmdLineInterface.h  CmdLineOutput.h  Constraint.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  LICENCE  MultiArg.h  MultiSwitchArg.h  OptionalUnlabeledTracker.h  StandardTraits.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  Visitor.h  XorHandler.h  ZshCompletionOutput.h
